// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should have some hintText 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
  <p
    class="root sizeScale2 hintText"
  >
    hint text
  </p>
</div>
`;

exports[`<SelectInput /> should match snapshot 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when active 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase notchedBaseShift notchedBaseActive"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 16px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="root invalid withStatus"
>
  <div
    class="notchedBase"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and valid 1`] = `
<div
  class="root valid withStatus"
>
  <div
    class="notchedBase"
  >
    <select
      autocomplete="off"
      class="input"
    >
      <option
        value="a"
      >
        Value 1
      </option>
      <option
        value="b"
      >
        Value 2
      </option>
      <option
        value="c"
      >
        Value 3
      </option>
    </select>
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          Hello World!
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with prefix icon 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase prefixed"
  >
    <label>
      <i
        class="root prefixIcon"
        style="width: 24px; height: 24px;"
      >
        <svg
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
    </label>
    <select
      autocomplete="off"
      class="input"
    />
    <i
      class="root arrow"
      style="width: 25px; height: 25px;"
    >
      <svg
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M158.08 183.04L256 280.96l97.92-97.92L384 213.333l-128 128-128-128 30.08-30.293z"
        />
      </svg>
    </i>
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;
